[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/user_interface/statesUI/StateInGameClassic2QbitsUI.gd" type="Script" id=1]
[ext_resource path="res://src/user_interface/statesUI/StateInGameUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/gameplay/gates/GatecX.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gameplay/circuit/Circuit2Qbits.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/gameplay/Qbit_view/QbitViewClassic2Qbits.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/user_interface/PopupLevelCompleted.tscn" type="PackedScene" id=6]

[node name="StateInGameClassic2QbitsUI" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Circuit2Qbits" parent="." index="3" instance=ExtResource( 4 )]
margin_left = 25.0
margin_top = 424.291
margin_right = 1460.0
margin_bottom = 861.291

[node name="QbitViewClassic2Qbits" parent="." index="4" instance=ExtResource( 5 )]
margin_left = 1052.0
margin_top = 160.0
margin_right = 1899.0
margin_bottom = 1037.0

[node name="GatesHBoxContainer" parent="." index="5"]
margin_left = 62.0
margin_right = 1182.0

[node name="GatePauliX" parent="GatesHBoxContainer" index="0"]
margin_left = 30.0
margin_right = 188.0

[node name="GatePauliY" parent="GatesHBoxContainer" index="1"]
margin_left = 263.0
margin_right = 421.0

[node name="GatePauliZ" parent="GatesHBoxContainer" index="2"]
margin_left = 496.0
margin_right = 654.0

[node name="GateHadamard" parent="GatesHBoxContainer" index="3"]
margin_left = 729.0
margin_right = 887.0

[node name="GatecX" parent="GatesHBoxContainer" index="4" instance=ExtResource( 3 )]
margin_left = 962.0
margin_right = 1090.0
margin_bottom = 154.0

[node name="PopupLevelCompleted" parent="." index="6" instance=ExtResource( 6 )]
visible = false
[connection signal="level_won" from="Circuit2Qbits" to="." method="win"]
[connection signal="qbit_state_changed" from="Circuit2Qbits" to="." method="updateCurrentQbitViews"]
[connection signal="tree_entered" from="Circuit2Qbits" to="." method="_on_Circuit2Qbits_tree_entered"]
[connection signal="two_qbit_state_changed" from="Circuit2Qbits" to="." method="updateCurrentQbitViews2QbitState"]
[connection signal="level_select_bt_pressed" from="PopupLevelCompleted" to="." method="backButtonPressed"]
[connection signal="next_level_bt_pressed" from="PopupLevelCompleted" to="." method="toNextLevel"]
